# uva-digital-methods-searchengine-assignment

./: .gitignore  NL_03-10-2023.xlsx  README.md  pyproject.toml
input_data/: google images count.xlsx  queries_english.txt
output_data/: data_15-46_05-10-2023.xlsx
src/: auto_complete_compare.py  image_count.py  main.py  queries.txt  treemap.py
